--- a/app/src/main/res/layout/activity_vader.xml
+++ b/app/src/main/res/layout/activity_vader.xml
@@ -26,7 +26,7 @@
                 android:text="@string/welcome_text" />
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/TVName"
                 android:layout_width="77dp"
                 android:layout_height="38dp"
                 android:gravity="center"
